Fixed wrap around issue when displaying url

--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -11,8 +11,7 @@ a {
     overflow-x: hidden;
 }
 
-.comment-body {
-    padding-bottom: 1%; 
+.comment-body { 
     padding-left: 3%;
 }
 
