--- a/src/styles/story.css
+++ b/src/styles/story.css
@@ -2,25 +2,24 @@
     text-decoration: none;
     font-size: 0.5em;
     font-weight: bold;
-    padding-left: 1%;
     color: black;
 }
 
 .bottom {
     padding-bottom: 2%;
+    padding-left: 1.5%;
     border-bottom: 1px solid #3b2e2a;
 }
 
 .link {
     font-size: 0.4em;
-    padding-left: 1.5%;
     color: black;
     text-decoration: none;
 }
 
 .author {
     font-size: 0.45em;
-    padding-left: 2%;
+    padding-left: 0.5%;
     color: #3b2e2a;
 }
 
